--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .linha-horizontal label, .linha-horizontal-2 label, .linha-horizontal-3 label {
       flex: 1; min-width: 180px;
     }
-    label { display: block; margin-top: 7px; }
+    label { display: block; margin-top: 6,5px; }
     input[type="text"], input[type="date"], input[type="time"], textarea {
       width: 100%; padding: 5px; font-weight: bold; font-size: 15px;
       color: blue; border-radius: 4px;
@@ -104,7 +104,7 @@
   <label>
   LOCAL DA OCORRÊNCIA: <button type="button"
           onclick="preencherEndereco()"
-          style="margin-top:2px; padding:1px; font-weight:bold; font-size: 12,5px">
+          style="padding:1px; font-weight:bold; font-size: 12,5px">
     📍 Usar localização atual
   </button>
   <input type="text" name="local" id="local" placeholder="Clique em 📍 para preencher automaticamente"> 
@@ -427,6 +427,7 @@ function preencherEndereco() {
 </script>
 </body>
 </html>
+
 
 
 
