--- a/index.html
+++ b/index.html
@@ -102,11 +102,7 @@
     <label>NÚMERO DO TELEFONE: <input type="text" name="telefone"></label>
   </div>
   <label>
-  LOCAL DA OCORRÊNCIA: <button type="button"
-          onclick="preencherEndereco()"
-          style="padding:1px; font-weight:bold; font-size: 12,5px">
-    📍Usar localização atual
-  </button>
+  LOCAL DA OCORRÊNCIA:
   <input type="text" name="local" id="local" placeholder="Clique em 📍 para preencher automaticamente"> 
 </label>
   <label>SITUAÇÃO INFORMADA: <textarea style="min-height: 90px;"></textarea></label>
@@ -465,6 +461,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
