--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
   <label>
   LOCAL DA OCORRÊNCIA:
-  <input type="text" name="local" id="local" placeholder="Clique em 📍 para preencher automaticamente"> 
+  <input type="text" name="local" id="local" placeholder="Ative a localização para preencher automaticamente"> 
 </label>
   <label>SITUAÇÃO INFORMADA: <textarea style="min-height: 90px;"></textarea></label>
   <label>3 - RELATÓRIO DO ATENDIMENTO E AÇÕES REALIZADAS: <textarea name="relatorio"></textarea></label>
@@ -133,7 +133,7 @@
     <canvas id="assinatura" width="690" height="170"></canvas><br>
   </div>
 
-  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de ACIDENTES/OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
+  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de ACIDENTES/OCORRÊNCIA da SMDSM, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
     <div style="position: relative;">
@@ -461,6 +461,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
