--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <label>LOCAL DA OCORRÊNCIA: <button type="button"
           onclick="preencherEndereco()"
           style="padding:1px; font-weight:bold; font-size: 12,5px">
-    📍Usar localização atual
+    📍Localização atual
   </button>
  <input type="text" name="local" id="local" placeholder="Ative a localização para preencher automaticamente"> 
 </label>
@@ -492,6 +492,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
